# media-center-app

./: CLAUDE.md  RELEASE_CHECKLIST.md  package-lock.json  package.json
docs/: alpha-build.md  current-session-handoff.md  embedded-mpv-experiment.md  libmpv-native-approach-b.md
electron/: db.ts  embeddedMpvExperimental.ts  ipc-channels.ts  main.ts  preload.ts
native/embedded-mpv/: .gitignore  Cargo.toml  README.md  build.rs  package-lock.json  package.json
native/embedded-mpv/src/: lib.rs
native/libmpv-poc/: .gitignore  Cargo.toml  README.md  build.rs  package-lock.json  package.json  test.mjs
native/libmpv-poc/render-poc/: Cargo.toml
native/libmpv-poc/render-poc/src/: main.rs
native/libmpv-poc/src/: lib.rs
src/: App.tsx  styles.css
src/components/: EmbeddedPlayerOverlay.tsx  KinoLogo.tsx  RatingControl.tsx  SourcesSection.tsx  StreamCard.tsx  TopNav.tsx
src/core/player/: types.ts
src/features/player/: playRequest.ts  playSource.ts  useEmbeddedPlayback.ts
src/pages/: ExperimentalEmbeddedPlayerPage.tsx  MediaPage.tsx  SettingsPage.tsx
src/pages/settings/sections/: AboutSettings.tsx  AppearanceSettings.tsx
src/state/: SettingsContext.tsx
src/theme/: ThemeProvider.tsx
src/types/: embedded-mpv.d.ts  preload.d.ts
